# aframe-plots

./: inspiral_range.ipynb  mdc-comparison.ipynb  pyproject.toml  sd_over_time.ipynb  uncertainty_comparison.ipynb  year_long_sd_vs_far.ipynb
aframe_plots/: config.py  plot_utils.py
data/: sd-vs-far_retrained.csv  year-long_sd-vs-far.csv
data/interval-sd-vs-far/: 01-18-2020_01-25-2020.csv  05-09-2019_06-08-2019.csv  06-15-2019_06-22-2019.csv  06-22-2019_06-29-2019.csv  07-06-2019_07-13-2019.csv  08-31-2019_09-07-2019.csv  11-23-2019_11-30-2019.csv
data/uncertainty-comparison/: run1_sd-vs-far.csv  run2_sd-vs-far.csv  run3_sd-vs-far.csv
